# template-dbt-docker

./: .example.env  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
dbt/: dbt_project.yml  profiles.yml
scripts/: dev_container.sh
