[tool.poetry]
name = "template-dbt-docker"
version = "1.0.0"
description = "A starting point for dockerized dbt development."
authors = ["Teghan Nightengale <tnightengale@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.3.0"
dbt-snowflake = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
